# bili-sb

./: .gitignore  Cargo.toml  LICENSE  README.md
.git-hooks/: commit-msg  pre-commit
.github/workflows/: lint.yml  outdated.yml  scheduled.yml
bili-proto/: Cargo.toml  README.md  build.rs
bili-proto/src/: lib.rs
bili-sb/: Cargo.toml  diesel.toml
bili-sb/migrations/00000000000001/: down.sql  up.sql
bili-sb/src/: cli.rs  config.rs  error.rs  layer.rs  macros.rs  main.rs  state.rs
bili-sb/src/client/: mod.rs
bili-sb/src/config/: default.rs
bili-sb/src/data/: abv.rs  common.rs  mod.rs
bili-sb/src/db/: mod.rs  schema.rs
bili-sb/src/routes/: mod.rs  pow.rs  segment_create.rs  segment_list.rs  segment_vote.rs  user_create.rs
blake3-pow/: Cargo.toml
blake3-pow/src/: lib.rs
proto/bilibili/app/view/v1/: view.proto
