[package]
name = "bili-sb"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SDLMoe/bili-sb"

[dependencies]
abv = "0.2.0"
anyhow = "1.0.75"
axum = "0.6.20"
bili-proto = { path = "../bili-proto" }
clap = { version = "4.3", features = ["derive", "cargo", "env"] }
extend = "1.2.0"
http = "0.2.9"
indoc = "2.0.3"
log = "0.4.20"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls-webpki-roots", "gzip"] }

[build-dependencies]
anyhow = "1.0.75"
glob = "0.3.1"
tonic-build = "0.9.2"
