[package]
name = "bili-sb"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SDLMoe/bili-sb"

[features]
default = []
dev = ["dotenvy"]

[dependencies]
abv = "0.2.0"
ahash = "0.8.3"
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["http2", "headers", "tower-log"] }
axum-client-ip = "0.4.1"
bb8 = "0.8.1"
bili-proto = { path = "../bili-proto" }
clap = { version = "4.4.1", features = ["derive", "cargo", "env"] }
dashmap = "5.5.1"
diesel = { version = "2.1.1", features = ["ipnet-address", "time", "uuid"] }
diesel-async = { version = "0.3.2", features = ["postgres", "bb8"] }
dotenvy = { version = "0.15.7", optional = true }
html-escape = "0.2.13"
http = "0.2.9"
indoc = "2.0.3"
ipnet = "2.8.0"
log = "0.4.20"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
time = "0.3.28"
tokio = { version = "1.32", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls-webpki-roots", "gzip"] }
tower-http = { version = "0.4.3", features = ["compression-full"] }
uuid = { version = "1.4.1", features = [
  "serde",
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
