[package]
name = "bili-sb"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SDLMoe/bili-sb"

[features]
default = []
dev = ["dotenvy"]

[dependencies]
abv = "0.2.0"
ahash = "0.8.3"
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["http2", "headers", "tower-log"] }
axum-client-ip = "0.4.2"
base64-simd = "0.8.0"
bb8 = "0.8.1"
bili-proto = { path = "../bili-proto" }
blake3-pow = { path = "../blake3-pow" }
clap = { version = "4.4.1", features = ["derive", "cargo", "env"] }
dashmap = "5.5.1"
diesel = { version = "2.1.1", features = ["ipnet-address", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = { version = "0.15.7", optional = true }
governor = "0.6.0"
html-escape = "0.2.13"
http = "0.2.9"
humantime-serde = "1.1.1"
indoc = "2.0.3"
ipnet = "2.8.0"
log = "0.4.20"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
prost = "0.12.0"
prost-types = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32", features = ["full"] }
toml = "0.7"
tonic = { version = "0.10.0", features = ["tls-webpki-roots", "gzip"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.3", features = ["compression-full"] }
tower_governor = "0.1.0"
uuid = { version = "1.4.1", features = [
  "serde",
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
